--- a/README.org
+++ b/README.org
@@ -368,9 +368,10 @@ Note: Currently disabled as it does not apply to this set up.
         dotfilesDir = "/home/chu/.config/dogfiles";
         theme =
           "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
-        wm = ./system/wm/x11.nix; # TODO
+        wm = "plasma"
         # window manager type (hyprland or x11) translator
-        wmType = ./system/wm/x11.nix; # TODO
+        # wmType = ./system/wm/x11.nix;
+        wmType = if (wm == "plasma") then "x11";
         browser =
           "librewolf"; # Default browser; must select one from ./user/app/browser/
         defaultRoamDir = "roam"; # Default org roam directory relative to ~/Org
