--- a/README.org
+++ b/README.org
@@ -368,7 +368,7 @@ Note: Currently disabled as it does not apply to this set up.
         dotfilesDir = "/home/chu/.config/dogfiles";
         theme =
           "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
-        wm = "plasma"
+        wm = "plasma";
         # window manager type (hyprland or x11) translator
         # wmType = ./system/wm/x11.nix;
         wmType = if (wm == "plasma") then "x11";
