--- a/README.org
+++ b/README.org
@@ -371,7 +371,7 @@ Note: Currently disabled as it does not apply to this set up.
         wm = "plasma";
         # window manager type (hyprland or x11) translator
         # wmType = ./system/wm/x11.nix;
-        wmType = if (wm == "plasma") then "x11";
+        wmType = "x11";
         browser =
           "librewolf"; # Default browser; must select one from ./user/app/browser/
         defaultRoamDir = "roam"; # Default org roam directory relative to ~/Org
