envvar, roswell start

--- a/README.org
+++ b/README.org
@@ -790,6 +790,8 @@ Note: Currently disabled as it does not apply to this set up.
     ];
   };
 
+  file."$XDG_DATA_DIR}/roswell/helper.el".source = ./user/app/lang/lisp;
+
   programs = {
     home-manager.enable = true;
     git = {
@@ -854,14 +856,15 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** steam.nix
 #+begin_src nix :mkdirp yes :tangle ./system/app/steam.nix
-{ pkgs, ... }: {
+{ pkgs, ... }:
+{
   hardware.opengl.driSupport32Bit = true;
   programs.steam.enable = true;
   environment = {
     systemPackages = [ pkgs.steam ];
     sessionVariables = {
-      STEAM_EXTRA_COMPAT_TOOLS_PATHS =
-        "\${XDG_DATA_DIR}/steam/root/compatibilitytools.d";
+      STEAM_EXTRA_COMPAT_TOOLS_PATHS = "\${XDG_DATA_DIR}/steam/root/compatibilitytools.d";
+      MANPATH = "${pkgs.man-db}/share/man:$MANPATH";
     };
   };
 }
