--- a/README.org
+++ b/README.org
@@ -790,7 +790,7 @@ Note: Currently disabled as it does not apply to this set up.
     ];
   };
 
-  file."$XDG_DATA_DIR}/roswell/helper.el".source = ./user/app/lang/lisp;
+  # file."$XDG_DATA_DIR}/roswell/helper.el".source = ./user/app/lang/lisp; # TODO
 
   programs = {
     home-manager.enable = true;
