--- a/README.org
+++ b/README.org
@@ -1790,13 +1790,12 @@ exit 1
   home.packages = with pkgs; [
     rlwrap
     roswell
-    # mitscheme
-    # chez
-    # chicken
-    # guile
-    # racket
-    # fennel
-    # janet
+    mitscheme
+    chicken
+    guile
+    racket
+    fennel
+    janet
   ];
 }
 #+end_src
