--- a/README.org
+++ b/README.org
@@ -354,14 +354,14 @@ Note: Currently disabled as it does not apply to this set up.
       # ---- SYSTEM SETTINGS ---- #
       systemSettings = {
         system = "x86_64-linux";
-        hostname = "dogleash";
+        hostname = "chunix";
         profile = "work";
         timezone = "America/Chicago";
         locale = "en_US.UTF-8";
         bootMode = "uefi"; # uefi or bios
         bootMountPath = "/boot"; # mount path for efi boot partition; only used for uefi boot mode
         grubDevice = ""; # device identifier for grub; only used for legacy (bios) boot mode
-        gpuType = "nvidia"; # amd, intel or nvidia; only makes some slight mods for amd at the moment
+        gpuType = "amd"; # amd, intel or nvidia; only makes some slight mods for amd at the moment
       };
       # ----- USER SETTINGS ----- #
       userSettings = rec {
