--- a/README.org
+++ b/README.org
@@ -781,13 +781,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** home.nix
 #+begin_src nix :mkdirp yes :tangle ./profiles/work/home.nix
-{
-  config,
-  pkgs,
-  userSettings,
-  ...
-}:
-{
+{ config, pkgs, userSettings, ... }: {
   imports = [
     ../../user/shell/sh.nix
     ../../user/app/lf/lf.nix
@@ -856,8 +850,11 @@ Note: Currently disabled as it does not apply to this set up.
     ];
   };
 
-  home.file.".local/share/roswell/helper.el".source = ../../user/lang/lisp/roswell/helper.el;
+  home.file.".local/share/roswell/helper.el".source =
+    ../../user/lang/lisp/roswell/helper.el;
   home.file.".config/nixpkgs/config.nix".source = ../../user/nixpkgs/config.nix;
+  home.file.".local/share/random-splash-image-dir/chosen-splash-images/src/chu-the-pup-scene-queen-by-samariyuu.png".source =
+    ../../res/chu-the-pup-scene-queen-by-samariyuu.png;
 
   programs = {
     home-manager.enable = true;
@@ -870,11 +867,7 @@ Note: Currently disabled as it does not apply to this set up.
         co = "checkout";
         s = "status";
       };
-      extraConfig = {
-        push = {
-          autoSetupRemote = true;
-        };
-      };
+      extraConfig = { push = { autoSetupRemote = true; }; };
     };
     zsh.enable = true;
     ssh.enable = true;
@@ -883,9 +876,7 @@ Note: Currently disabled as it does not apply to this set up.
     firefox.profiles.chu = {
       name = userSettings.username;
       path = userSettings.username;
-      search = {
-        default = "DuckDuckGo";
-      };
+      search = { default = "DuckDuckGo"; };
     };
   };
 
@@ -898,8 +889,20 @@ Note: Currently disabled as it does not apply to this set up.
 
   xdg = {
     enable = true;
-    userDirs = {
-      enable = true;
+    userDirs = { enable = true; };
+  };
+  gtk = {
+    enable = true;
+    theme = {
+      name = "Breeze-Dark";
+      package = pkgs.libsForQt5.breeze-gtk;
+    };
+  };
+  gtk3 = { extraConfig.gtk-application-prefer-dark-theme = true; };
+  dconf.settings = {
+    "org/gnome/desktop/interface" = {
+      gtk-theme = "Breeze-Dark";
+      color-scheme = "prefer-dark";
     };
   };
 }
