--- a/README.org
+++ b/README.org
@@ -898,14 +898,15 @@ Note: Currently disabled as it does not apply to this set up.
       package = pkgs.libsForQt5.breeze-gtk;
     };
   };
+  # gtk3 = { extraConfig.gtk-application-prefer-dark-theme = true; };
   dconf.settings = {
     "org/gnome/desktop/interface" = {
       gtk-theme = "Breeze-Dark";
       color-scheme = "prefer-dark";
     };
   };
-  hardware.opentabletdriver.enable = true;
-  hardware.opentabletdriver.daemon.enable = true;
+  # hardware.opentabletdriver.enable = true;
+  # hardware.opentabletdriver.daemon.enable = true;
 }
 #+end_src
 * system/
