--- a/README.org
+++ b/README.org
@@ -934,8 +934,8 @@ Note: Currently disabled as it does not apply to this set up.
       name = "Breeze-Dark";
       package = pkgs.libsForQt5.breeze-gtk;
     };
+    extraConfig.gtk-application-prefer-dark-theme = true;
   };
-  # gtk3 = { extraConfig.gtk-application-prefer-dark-theme = true; };
   dconf.settings = {
     "org/gnome/desktop/interface" = {
       gtk-theme = "Breeze-Dark";
