--- a/README.org
+++ b/README.org
@@ -679,6 +679,7 @@ Note: Currently disabled as it does not apply to this set up.
   environment = {
     systemPackages = with pkgs; [
       vim # Do not forget to add an editor to edit configuration.nix! The Nano editor is also installed by default.
+      neovim
       wget
       zsh
       git
@@ -701,7 +702,6 @@ Note: Currently disabled as it does not apply to this set up.
       '') # by librephoenix
 
       tldr
-      neovim
       htop
       ((emacsPackagesFor emacs-gtk).emacsWithPackages (epkgs: [ epkgs.vterm ]))
       protonup # imperative bootstrap for proton-ge
@@ -731,6 +731,7 @@ Note: Currently disabled as it does not apply to this set up.
       xdotool
       shfmt
       gnuplot
+      ccls
     ];
     shells = with pkgs; [ zsh ];
   };
