--- a/README.org
+++ b/README.org
@@ -765,6 +765,7 @@ Note: Currently disabled as it does not apply to this set up.
     sessionVariables = {
       MANPATH = "${pkgs.man-db}/share/man:$MANPATH";
       ROSWELL_HOME = "$XDG_DATA_HOME/roswell";
+      EDITOR = "nvim";
     };
   };
 
