--- a/README.org
+++ b/README.org
@@ -934,7 +934,7 @@ Note: Currently disabled as it does not apply to this set up.
       name = "Breeze-Dark";
       package = pkgs.libsForQt5.breeze-gtk;
     };
-    extraConfig.gtk-application-prefer-dark-theme = true;
+    # extraConfig.gtk-application-prefer-dark-theme = true;
   };
   dconf.settings = {
     "org/gnome/desktop/interface" = {
